compiler/tests/fuzz/negative_corpus/parse_unclosed_record_type.mlc
type OpenRecord = { field_name: string